css/custom.css
.mdl-mini-footer {
  color: rgb(158,158,158);
  background-color: rgb(33,150,243) !important; 
  color: rgb(250,250,250) !important;
  padding: 10px 16px !important;
  width: 100%;
} 

.align_center{
  text-align: center;
}

/* Image card  */ 
.demo-card-image.mdl-card {
  width: auto ;
  height: 100%;
}
.demo-card-image > .mdl-card__actions {
  height: 52px;
/*  padding: 16px;*/
  background: rgba(0, 0, 0, 0.3);
}
.demo-card-image__filename {
  color: #fff;
  font-size: 14px;
  font-weight: 500;
}
.comprendre{
  background: url('../img/menu_moustique.jpg') center / cover;  
}
.se_proteger{
  background: url('../img/menu_moustiquaire.jpg') center / cover;  
}
.diagnostiquer{
  background: url('../img/menu_tdr.jpg') center / cover;  
}
.se_soigner{
  background: url('../img/menu_drug.jpg') center / cover;  
}
.pharmacie{
  background: url('../img/menu_docteur.jpg') center / cover;  
}
.questions{
  background: url('../img/menu_questions.jpg') center / cover;  
}
.quiz{
  background: url('../img/menu_quiz.jpg') center / cover;  
}
.chasse{
  background: url('../img/menu_technicien.jpg') center / cover;  
}
.comment{
  background: url('../img/menu_clavier.jpg') center / cover;  
}
.qui{
  background: url('../img/menu_sourire.jpg') center / cover;  
}

    .mdl-layout__header-row {
      padding: 10px 16px 0 50px; }

.mdl-container {
  max-width: 900px; 
  margin: auto;
  box-shadow: 0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12),0 2px 4px -1px rgba(0,0,0,.2);
}  
.mdl-container_text {
  padding: 10px 15px;
}

.text_container {
 /* padding: 20px 56px;*/
 padding: 0px 0px;
  width: 100%;
  margin:  0 auto;
}    

.full_img{
  width: 100%;
  height: auto;
}
.mdl-layout__content {
  padding: 0px 15px 0px 15px !important;
}

.mdl-grid {
  padding: 0px !important;
}

.demo-card-square.mdl-card {
  width: inherit;
  height: 320px;
}
.demo-card-square > .mdl-card__title {
  color: #fff;
}

.parasite{
  background: url('../img/parasite_palu.jpg') center / cover no-repeat #46B6AC; 
}
.moustique_pique{
  background: url('../img/moustique_pique.jpg') center / cover no-repeat #46B6AC; 
}
.larves_moustiques{
    background: url('../img/larves_moustiques.jpg') center / cover no-repeat #46B6AC; 
}
.pulverisation{
    background: url('../img/pulverisation.jpg') center / cover no-repeat #46B6AC; 
}
.moustiquaire{
    background: url('../img/moustiquaire.jpg') center / cover no-repeat #46B6AC;
}
.tdr{
    background: url('../img/TDR.jpg') center / cover no-repeat #46B6AC;
}
.artemisia_annua{
  background: url('../img/artemisia_annua.jpg') center / cover no-repeat #46B6AC;
}
.drug{
  background: url('../img/menu_drug.jpg') center / cover no-repeat #46B6AC;
}
.docteur{
  background: url('../img/menu_docteur.jpg') center / cover no-repeat #46B6AC;
}
.questions{
  background: url('../img/menu_questions.jpg') center / cover no-repeat #46B6AC;
}
.quiz{
  background: url('../img/menu_quiz.jpg') center / cover no-repeat #46B6AC;
}
.technicien{
  background: url('../img/menu_technicien.jpg') center / cover no-repeat #46B6AC;
}
.clavier{
  background: url('../img/menu_clavier.jpg') center / cover no-repeat #46B6AC;
}
.sourire{
  background: url('../img/menu_sourire.jpg') center / cover no-repeat #46B6AC;
}
.moustique{
  background: url('../img/menu_moustique.jpg') center / cover no-repeat #46B6AC;
}
.fongwama_logo{
  background: url('../img/logo_fongwama.jpg') center / cover no-repeat #46B6AC;  
}
.ecair_logo{
  background: url('../img/logo_fondation_ecair.jpg') center / cover no-repeat #46B6AC;  
}
.skepsos_logo{
  background: url('../img/logo_skepsos.jpg') center / cover no-repeat #46B6AC;  
}
.azur_logo{
  background: url('../img/logo_azur.jpg') center / cover no-repeat #46B6AC;  
}
.fcrm_logo{
  background: url('../img/logo_fcrm.jpg') center / cover no-repeat #46B6AC;  
  margin: 0 auto;
}
.pnlp_logo{
  background: url('../img/logo_pnlp.jpg') center / cover no-repeat #46B6AC;  
}
.congotelecom_logo{
  background: url('../img/logo_congo_telecom.jpg') center / cover no-repeat #46B6AC;  
}
.container_title{
  padding: 0px 15px;
}

.mdl-data-table td {
  text-align: center !important;
}
.mdl-data-table {
  width: 100%;
}

.figureImg {
  text-align: center;
}
.mdl-layout__drawer{
  background-color: rgb(33,150,243) !important;
  color: white;
}
.mdl-navigation__link > i{
  color: white !important;
  margin-right: 10px;
}
.mdl-navigation__link{
  color: #FFF !important;
}
.mdl-logo{
  margin-left: 10px;
}
.material-icons {
  color: #FFF;
}
.mdl-layout__header {
  background-color: rgb(33,150,243);
  color: rgb(255, 255, 255);
}
.bg_search{
  background-color: rgb(33,150,243);
}
.search{
  border: 1px solid #DDD;
  background-color: white;
  padding: 5px;
}

.search > i{
  vertical-align: middle;
}

.search > input{
  vertical-align: middle;
  border: none;
  width: 83%;
}

.search_bar_results {
  position: absolute;
  z-index: 1000;
  max-height: 100%;
  min-width: 100%;
  overflow: scroll;
  padding-left: 2%;
  padding-right: 2%;
  background-color: rgba(255,255,255,0.7);
}

.mdl-card {
  min-height: 150px !important;
}
.demo-card-image > .mdl-card__actions {
  height: auto !important;
}

.mdl-layout__drawer > .mdl-layout__title, .mdl-layout__drawer > .mdl-layout-title {
  background-color: #fff;
  padding-top:  20px;
  padding-bottom: 20px;  
}
.mdl-layout__drawer .mdl-navigation {
  padding-top: 0px !important; 
}
.mdl-layout__drawer .mdl-navigation .mdl-navigation__link {
  padding: 10px 16px;
}
.mdl-layout__drawer .mdl-navigation .mdl-navigation__link:hover {
  background-color: rgba(116, 194, 255, 0.57) !important;
}
.link_color{
  color: #999;
}
.center {
  text-align: center;
  margin: auto;
  max-width: 200px;
  margin-bottom: 20px;
}
img {
  /* vertical-align: middle; */
  width: 100%;
  height: auto;
}
.mdl-layout__drawer > .mdl-layout__title, .mdl-layout__drawer > .mdl-layout-title > img {
width: auto;
height: auto;
}
input.search_page{
  border: 2px solid #999;
  padding: 10px;
  box-sizing: border-box;
}
.full_width{
  width: 100%;
}
.panel {
  margin-bottom: 20px;
  background-color: #fff;
  border: 1px solid transparent;
  border-radius: 4px;
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
          box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
}
.panel-default {
  border-color: #ddd;
}
.panel-default > .panel-heading {
  color: #333;
  background-color: #f5f5f5;
  border-color: #ddd;
}
.panel-heading {
  padding: 10px 15px;
  border-bottom: 1px solid transparent;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}
.panel-body {
  padding: 15px;
}
.blue_color{
  color: rgb(33,150,243) !important;
}
a {
  color: #FFF;
  font-weight: 500;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}

